src/objects/BGBL__Batch_Letter_Job__c.object
<CustomObject>
    <description>Letter job stats</description>
    <fields>
        <fullName>BGBL__Batch_Duplex_Printing__c</fullName>
        <formula>BGBL__Batch_Letter__r.BGBL__Batch_Duplex_Printing__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Batch Duplex Printing</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BGBL__Batch_File_Chunk_Size__c</fullName>
        <formula>$Setup.BGBL__Letter_Single__c.BGBL__Batch_Letter_Chunk_Size__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Batch File Chunk Size</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BGBL__Batch_Letter_Name__c</fullName>
        <formula>BGBL__Batch_Letter__r.BGBL__File_Name_Prefix__c</formula>
        <label>File Name Prefix</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BGBL__Batch_Letter__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Batch Letter</label>
        <referenceTo>BGBL__Batch_Letter__c</referenceTo>
        <relationshipName>Batch_Run_Jobs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BGBL__Child_Iterate_Ids__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Record id&apos;s to filter children record results further</inlineHelpText>
        <label>Child Iterate Ids</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>BGBL__End_Time__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Completed Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>BGBL__HasChildIds__c</fullName>
        <defaultValue>false</defaultValue>
        <label>HasChildIds</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BGBL__Number_of_Completed_Jobs__c</fullName>
        <description>Number of Completed Jobs</description>
        <label>Number of Completed Jobs</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BGBL__Number_of_Jobs__c</fullName>
        <description>Number of Jobs</description>
        <label>Number of Jobs</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BGBL__Org_Name__c</fullName>
        <formula>$Organization.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Used only in reporting which source org requested the letter.</inlineHelpText>
        <label>Org Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BGBL__Output_Type__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Output Type</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BGBL__Override_Parameters__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Override Parameters</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>BGBL__Parent_Letter_Job__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>the original job in which this sub job spun from.</inlineHelpText>
        <label>Parent Letter Job</label>
        <referenceTo>BGBL__Batch_Letter_Job__c</referenceTo>
        <relationshipLabel>Letter Jobs</relationshipLabel>
        <relationshipName>Sub_Letter_Jobs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BGBL__Parent_Query_Ids__c</fullName>
        <description>string and comma delimited list of id&apos;s to restrict first letter query (the parent query) used by an additional IN clause</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Limit data scope of letter requests by including comma-delimited, single-quoted parent record id&apos;s to determine which parent records to work within the first/parent applied letter query.</inlineHelpText>
        <label>Parent Query Ids</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>BGBL__Print_File_Location__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Print File Location</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>BGBL__Print_File_Name__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Print File Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BGBL__Print_File__c</fullName>
        <formula>IF(OR(AND(BGBL__Print_File_Name__c == &quot;&quot;,BGBL__Print_File_Location__c ==&quot;&quot;),TEXT(BGBL__Status__c)!= &quot;Completed&quot;), &quot;-- not available --&quot;, 
	IF(BGBL__Single_Letter_Job__c == true, HYPERLINK(BGBL__Print_File_Name__c , &quot;click to view&quot;, &quot;_top&quot;), 
		IF(AND(BGBL__Print_File_Name__c != &quot;&quot;,BGBL__Print_File_Location__c ==&quot;&quot;),
			IF(contains($Setup.BGBL__Letter_Single__c.BGBL__Letter_Request_Endpoint__c, &quot;dev&quot;), 
				HYPERLINK(&quot;https://devletterbatch.mybasicgov.com/mergedoc/&quot; &amp; BGBL__Print_File_Name__c ,&quot;click to view&quot;, &quot;_top&quot;), 
				IF(contains($Setup.BGBL__Letter_Single__c.BGBL__Letter_Request_Endpoint__c, &quot;test&quot;), 
					HYPERLINK(&quot;https://testletterbatch.mybasicgov.com/mergedoc/&quot; &amp; BGBL__Print_File_Name__c ,&quot;click to view&quot;, &quot;_top&quot;), 
					IF(contains($Setup.BGBL__Letter_Single__c.BGBL__Letter_Request_Endpoint__c, &quot;staging&quot;),
						HYPERLINK(&quot;https://stagingletterbatch.mybasicgov.com/mergedoc/&quot; &amp; BGBL__Print_File_Name__c , &quot;click to view&quot;, &quot;_top&quot;), 
						HYPERLINK(&quot;https://letterbatch.mybasicgov.com/mergedoc/&quot; &amp; BGBL__Print_File_Name__c , &quot;click to view&quot;, &quot;_top&quot;) 
					) 
				)
			),
			HYPERLINK(BGBL__Print_File_Location__c,&quot;click to view&quot;,&quot;_top&quot;)
		)
	) 
)</formula>
        <label>Print File</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BGBL__Recipients__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>comma delimited list of contact ids up to a max of 2000 to have letter copies. Minimum 1 contact id.</inlineHelpText>
        <label>Recipients</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>BGBL__Save_Batch_Letter__c</fullName>
        <formula>BGBL__Batch_Letter__r.BGBL__Save_Batch_Letter__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Save Batch File</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BGBL__Save_Generated_Document_as_File__c</fullName>
        <formula>$Setup.BGBL__Letter_Single__c.BGBL__Save_Generated_Document_as_File__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Save Generated Document as File</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BGBL__Single_Letter_Job__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Only one letter in this job</inlineHelpText>
        <label>Single</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BGBL__Start_Time__c</fullName>
        <defaultValue>NOW()</defaultValue>
        <encryptionScheme>None</encryptionScheme>
        <label>Started Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>BGBL__Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>In Queue (verifying...)</fullName>
                    <default>true</default>
                    <label>In Queue (verifying...)</label>
                </value>
                <value>
                    <fullName>Processing</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
                <value>
                    <fullName>Failed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BGBL__Submit_DateTime__c</fullName>
        <description>Date and time that the Letter Job is scheduled to be submitted. Use cases: to refresh API session id for long queues eg. &gt; 4 hours or re-sending failed jobs.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>If still in &apos;In Queue&apos;, date and time in which job gets submitted. Sent immediately if this is blank.</inlineHelpText>
        <label>Submit Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>BGBL__TemplateId__c</fullName>
        <formula>BGBL__Batch_Letter__r.BGBL__Merge_Template__r.Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>TemplateId</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BGBL__debug__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>System Messages</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <label>Letter Job</label>
    <nameField>
        <displayFormat>BLJ-{YYYY}{MM}{DD}-{0}</displayFormat>
        <label>Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Letter Jobs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>